# scribe-dictation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  START_HERE.md  main.py  pyproject.toml
.githooks/: brand-scan-paths  brand-wordlist.txt  pre-commit
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml
docs/: WINDOWS_BUILD.md
scribe_dictation/: __init__.py  __main__.py
scribe_dictation/audio/: __init__.py  capture.py  devices.py
scribe_dictation/export/: __init__.py  formats.py  models.py
scribe_dictation/transcribe/: __init__.py  service.py
scribe_dictation/ui/: __init__.py  app.py
scripts/: brand_lint.py
tests/: __init__.py  test_audio_capture.py  test_audio_devices.py  test_capture_latency.py  test_clipboard_autopaste.py  test_export.py  test_integration.py  test_transcribe.py  test_wav_header_property.py
