[project]
name = "scribe-dictation"
version = "0.2.0"
description = "A cross-platform desktop dictation app using OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "pynput>=1.8.2",
    "pyperclip>=1.11.0",
    "pyside6>=6.11.1",
    "requests>=2.34.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
scribe-dictation = "scribe_dictation.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

